'show number of correct answers' option added to quiz start page

--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -8,6 +8,7 @@
       "options": {
         "label": "Možnosti kviza:",
         "trackProgress": "Beleži napredek",
+        "numCorrectAnswers": "Prikaži št. pravilnih odgovorov",
         "randomQuestions": "Naključna vprašanja"
       },
       "toolbar": {
