--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,6 +8,7 @@
       "options": {
         "label": "Quiz options:",
         "trackProgress": "Track progress",
+        "numCorrectAnswers": "Show number of correct answers",
         "randomQuestions": "Random questions"
       },
       "toolbar": {
