google analytics & sentry added, other minor bugs fixed

--- a/src/assets/i18n/sl.json
+++ b/src/assets/i18n/sl.json
@@ -8,7 +8,7 @@
       "options": {
         "label": "Možnosti kviza:",
         "trackProgress": "Beleži napredek",
-        "numCorrectAnswers": "Prikaži št. pravilnih odgovorov",
+        "numCorrectAnswers": "Prikaži število pravilnih odgovorov",
         "randomQuestions": "Naključna vprašanja"
       },
       "toolbar": {
