--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,10 @@
       "title": "Start Quiz",
       "description": "We've prepare <strong>{{ number }}</strong> questions for you! Lets see how many of them you can solve correctly. Enjoy!",
       "loading": "Loading questions...",
+      "sections": {
+        "label": "Sections",
+        "noQuestions": "There is no questions for selected sections"
+      },
       "options": {
         "label": "Quiz options:",
         "trackProgress": "Track progress",
@@ -60,6 +64,7 @@
         },
         "id": "Id",
         "question": "Question",
+        "section": "Section",
         "hint": "Hint",
         "order": "Order",
         "answers": {
